--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>File Metadata Microservice</title>
+
+    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
+
   </head>
   <body>
     <h1>File Metadata Microservice</h1>
+
+    <!-- Bootstrap scripts -->
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/jquery/jquery.min.js"></script>
+    <script src="/popper/popper.min.js"></script>
+
   </body>
 </html>
