--- a/views/index.html
+++ b/views/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <title>File Metadata Microservice</title>
+  
+  <!-- Bootstrap -->
+  <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
+  
+  <!-- Font Awesome -->
+  <link rel="stylesheet" type="text/css" href="/fontawesome/css/all.css">
+  
+</head>
+<body>
+  <h1>File Metadata Microservice</h1>
 
-    <title>File Metadata Microservice</title>
+  <footer class="container-fluid">
+    <p>Made with <i class="fas fa-heart"></i> and <i class="fas fa-coffee"></i> from the <a href="#">Philippines</a> by <a href="https://arantebw.github.io/" target="_blank">Billy Arante</a></p>
+    <ul>
+      <li><a href="https://www.freecodecamp.org/arantebw/" target="_blank"><i class="fab fa-free-code-camp fa-2x"></i></a></li>
+      <li><a href="https://github.com/arantebw/" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/billyarante/" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a></li>
+    </ul>
+  </footer>
 
-    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
-
-  </head>
-  <body>
-    <h1>File Metadata Microservice</h1>
-
-    <!-- Bootstrap scripts -->
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/jquery/jquery.min.js"></script>
-    <script src="/popper/popper.min.js"></script>
-
-  </body>
+  <!-- Bootstrap scripts -->
+  <script src="/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/jquery/jquery.min.js"></script>
+  <script src="/popper/popper.min.js"></script>
+  
+</body>
 </html>
