--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,9 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" type="text/css" href="/fontawesome/css/all.css">
   
+  <!-- Custom stylesheets -->
+  <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+
 </head>
 <body>
   <h1>File Metadata Microservice</h1>
@@ -26,9 +29,9 @@
   </footer>
 
   <!-- Bootstrap scripts -->
-  <script src="/bootstrap/js/bootstrap.min.js"></script>
   <script src="/jquery/jquery.min.js"></script>
   <script src="/popper/popper.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.min.js"></script>
   
 </body>
 </html>
