add: Initial design for header

--- a/views/index.html
+++ b/views/index.html
@@ -14,11 +14,13 @@
   
   <!-- Custom stylesheets -->
   <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
-
+  
 </head>
 <body>
-  <h1>File Metadata Microservice</h1>
-
+  <header class="container-fluid text-center">
+    <h1>File Metadata Microservice</h1>
+  </header>
+  
   <footer class="container-fluid">
     <p>Made with <i class="fas fa-heart"></i> and <i class="fas fa-coffee"></i> from the <a href="#">Philippines</a> by <a href="https://arantebw.github.io/" target="_blank">Billy Arante</a></p>
     <ul>
@@ -27,7 +29,7 @@
       <li><a href="https://www.linkedin.com/in/billyarante/" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a></li>
     </ul>
   </footer>
-
+  
   <!-- Bootstrap scripts -->
   <script src="/jquery/jquery.min.js"></script>
   <script src="/popper/popper.min.js"></script>
