--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,1 +1,1 @@
-@import url("https://fonts.googleapis.com/css?family=Merriweather&display=swap");body{font-family:'Merriweather', serif}
+@import url("https://fonts.googleapis.com/css?family=Merriweather&display=swap");body{font-family:'Merriweather', serif}header{border-bottom:1px solid lightgrey;padding:15px 0}
