add: Create layout for footer

--- a/views/index.html
+++ b/views/index.html
@@ -22,8 +22,8 @@
   </header>
   
   <footer class="container-fluid">
-    <p>Made with <i class="fas fa-heart"></i> and <i class="fas fa-coffee"></i> from the <a href="#">Philippines</a> by <a href="https://arantebw.github.io/" target="_blank">Billy Arante</a></p>
-    <ul>
+    <p class="text-center">Made with <i class="fas fa-heart"></i> and <i class="fas fa-coffee"></i> from the <a href="#">Philippines</a><br> by <a href="https://arantebw.github.io/" target="_blank">Billy Arante</a></p>
+    <ul class="text-center">
       <li><a href="https://www.freecodecamp.org/arantebw/" target="_blank"><i class="fab fa-free-code-camp fa-2x"></i></a></li>
       <li><a href="https://github.com/arantebw/" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
       <li><a href="https://www.linkedin.com/in/billyarante/" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a></li>
