--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -1,10 +1,42 @@
 @import url('https://fonts.googleapis.com/css?family=Merriweather&display=swap');
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Merriweather', serif;
 }
 
 header {
-  border-bottom: 1px solid lightgrey;
-  padding: 15px 0;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  h1 {
+    font-size: 1.3rem;
+    margin-bottom: 0;
+  }
+}
+
+footer {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #1d2240;
+  position: fixed;
+  bottom: 0;
+  color: #fff;
+  p {
+    font-size: 12px;
+  }
+  ul {
+    list-style: none;
+    li {
+      display: inline-block;
+    }
+    li:nth-child(even) {
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+  }
 }
