add: Create layout for uploading image form

--- a/views/index.html
+++ b/views/index.html
@@ -21,6 +21,17 @@
     <h1>File Metadata Microservice</h1>
   </header>
   
+  <div class="container">
+    <main class="card">
+      <div class="card-body">
+        <form action="" method="post">
+          <input type="file" name="" id="" required>
+          <input class="btn btn-primary" type="submit" value="Upload Image">
+        </form>
+      </div>
+    </main>
+  </div>
+  
   <footer class="container-fluid">
     <p class="text-center">Made with <i class="fas fa-heart"></i> and <i class="fas fa-coffee"></i> from the <a href="#">Philippines</a><br> by <a href="https://arantebw.github.io/" target="_blank">Billy Arante</a></p>
     <ul class="text-center">
