--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -19,6 +19,15 @@ header {
   }
 }
 
+form {
+  input {
+    width: 100%;
+  }
+  input:nth-child(1) {
+    margin-bottom: 15px;
+  }
+}
+
 footer {
   padding-top: 15px;
   padding-bottom: 15px;
