--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -49,3 +49,27 @@ footer {
     }
   }
 }
+
+@media (min-width: 375px) {
+  header {
+    h1 {
+      font-size: 1.6rem;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  header {
+    h1 {
+      font-size: 2rem;
+    }
+  }
+}
+
+@media (min-width: 1280px) {
+  header {
+    h1 {
+      font-size: 2.5rem;
+    }
+  }
+}
