--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -64,6 +64,9 @@ footer {
       font-size: 2rem;
     }
   }
+  .container {
+    width: 70%;
+  }
 }
 
 @media (min-width: 1280px) {
@@ -71,5 +74,8 @@ footer {
     h1 {
       font-size: 2.5rem;
     }
+  }
+  .container {
+    width: 50%;
   }
 }
