--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,8 @@
   
   <title>File Metadata Microservice</title>
   
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
   <!-- Bootstrap -->
   <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
   
