--- a/views/index.html
+++ b/views/index.html
@@ -26,8 +26,8 @@
   <div class="container">
     <main class="card">
       <div class="card-body">
-        <form action="" method="post">
-          <input type="file" name="" id="" required>
+        <form action="/api/analyze-file" method="POST" enctype="multipart/form-data">
+          <input type="file" name="upfile" id="upfile" required>
           <input class="btn btn-primary" type="submit" value="Upload Image">
         </form>
       </div>
